--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
     <!-- Chat Container-->
-    <div class="chat-container"></div>
+    <div class="chat-container">
+        <div class="chat outgoing"></div>
+        <div class="chat incoming"></div>
+    </div>
 
     <!-- Typing container-->
     <div class="typing-container">
