completed for now

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="typing-container">
         <div class="typing-content">
             <div class="typing-textarea">
-                <textarea id="chat-input" placeholder="Enter a prompt here" required></textarea>
+                <textarea id="chat-input" placeholder="Enter a prompt" required></textarea>
                 <span id="send-btn" class="material-symbols-rounded">send</span>
             </div>
             <div class="typing-controls">
@@ -30,8 +30,13 @@
             </div>
         </div>
     </div>
-    <script type='text/javascript' src='config.js'></script>
-    <script src="script.js" defer></script>
     
+    <!-- Footer -->
+    <footer>
+        <p><center>2023 &copy Aurora Reserved. Developed by Ananya Pal.</center></p>        
+    </footer>
+
+    <script type='text/javascript' src='config.js'></script>
+    <script src="script.js" defer></script>    
 </body>
 </html>
